Wired setting: improve handling of link negotiation

Summary:
Adds option to ignore link-negotiation, also uses a combobox, similar to what
nm-connection-editor is using, to give a choice only with sane values for speed.

BUG: 413211

Test Plan:
I tried to configure all possible combinations, all of them were saved correctly and loaded afterwards.

Screenshot of updated wired setting:
{F7648938}

Reviewers: #plasma, #vdg, davidedmundson

Reviewed By: #plasma, #vdg, davidedmundson

Subscribers: davidedmundson, devurandom, ngraham, dvalter, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D24866